ingress/demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: foo
spec:
  ingressClassName: nginx
  rules:
  - host: www.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: exampleService
            port:
              number: 443
  tls:
  - hosts:
    - www.example.com
    secretName: foo-tls
